// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders correctly with className 1`] = `
<div
  className="container mx-auto flex pb-1"
>
  <p>
    Children
  </p>
</div>
`;

exports[`Container renders correctly without className 1`] = `
<div
  className="container mx-auto flex"
>
  <p>
    Children
  </p>
</div>
`;
